@@ -103,7 +103,7 @@ Reference documentation is <a href="refdoc/index.html">here</a>.
 
 <section id="license" title="License">
 <p>
-Xmldiff is released under the <a href="http://www.gnu.org/licenses/gpl.html">LGPL v3</a>.
+Xmldiff is released under the <a href="http://www.gnu.org/licenses/lgpl.html">LGPL v3</a>.
 </p>
 </section>
 
