@@ -58,13 +58,11 @@ let dom_of_xml =
       List.iter (Dom.appendChild n) subs;
       (n :> Dom.node Js.t)
   in
-  fun t ->
-    let doc = Dom_html.document in
+  fun ?(doc=Dom_html.document) t ->
     map doc t
 ;;
 
-let dom_node_by_path ?(skip_node=(fun _->false)) path =
-  let doc = Dom_html.document in
+let dom_node_by_path ?(doc=Dom_html.document) ?(skip_node=(fun _->false)) path =
   let rec next node path =
     let node = Js.Opt.get (node##nextSibling)
       (fun _ -> log ((Js.to_string node##nodeName)^" has no sibling"); raise Not_found)
@@ -119,19 +117,19 @@ let dom_node_by_path ?(skip_node=(fun _->false)) path =
   in
   on_child (doc:>Dom.node Js.t) path
 
-let apply_patch_operation ?skip_node (path, op) =
+let apply_patch_operation ?(doc=Dom_html.document) ?skip_node (path, op) =
   log (Xmldiff.string_of_patch_operation (path, op));
   let parent node = Js.Opt.get (node##parentNode) (fun _ -> assert false) in
   let apply node op =
     match op with
     | Xdiff.PReplace tree ->
         let parent = parent node in
-        ignore(parent##replaceChild (dom_of_xml tree, node))
+        ignore(parent##replaceChild (dom_of_xml ~doc tree, node))
     | Xdiff.PInsert (tree, `FirstChild) ->
-        ignore(node##insertBefore (dom_of_xml tree, (node##firstChild)))
+        ignore(node##insertBefore (dom_of_xml ~doc tree, (node##firstChild)))
     | Xdiff.PInsert (tree, `After) ->
         let parent = parent node in
-        ignore(parent##insertBefore (dom_of_xml tree, (node##nextSibling)))
+        ignore(parent##insertBefore (dom_of_xml ~doc tree, (node##nextSibling)))
     | Xdiff.PDelete ->
         let parent = parent node in
         ignore(parent##removeChild(node))
@@ -140,12 +138,12 @@ let apply_patch_operation ?skip_node (path, op) =
         let text = Dom_html.document##createTextNode (Js.string s) in
         ignore(parent##replaceChild ((text :> Dom.node Js.t), node))
     | Xdiff.PUpdateNode (name, atts) when node##nodeType = Dom.TEXT ->
-        let n = dom_of_xml (`E(name,atts,[])) in
+        let n = dom_of_xml ~doc (`E(name,atts,[])) in
         let parent = parent node in
         ignore(parent##replaceChild (n, node))
     | Xdiff.PUpdateNode (name, atts) when node##nodeType = Dom.ELEMENT ->
         let parent = parent node in
-        let n = dom_of_xml (`E(name,atts,[])) in
+        let n = dom_of_xml ~doc (`E(name,atts,[])) in
         let children = node##childNodes in
         for i=0 to children##length-1 do
           Js.Opt.iter (node##firstChild) (fun node -> Dom.appendChild n node) ;
@@ -155,7 +153,7 @@ let apply_patch_operation ?skip_node (path, op) =
     | Xdiff.PMove (newpath, pos) ->
         let parent_node = parent node in
         let removed_node = parent_node##removeChild(node) in
-        let new_loc = dom_node_by_path ?skip_node newpath in
+        let new_loc = dom_node_by_path ~doc ?skip_node newpath in
         match pos with
         | `FirstChild ->
              ignore(new_loc##insertBefore(removed_node, (new_loc##firstChild)))
@@ -163,8 +161,9 @@ let apply_patch_operation ?skip_node (path, op) =
             let new_parent = parent new_loc in
             ignore(new_parent##insertBefore(removed_node, (new_loc##nextSibling)));
   in
-  let node = dom_node_by_path ?skip_node path in
+  let node = dom_node_by_path ~doc ?skip_node path in
   apply (node:>Dom.node Js.t) op
 ;;
 
-let apply_dom_patch ?skip_node l = List.iter (apply_patch_operation ?skip_node) l ;;
+let apply_dom_patch ?doc ?skip_node l = 
+  List.iter (apply_patch_operation ?doc ?skip_node) l ;;
