@@ -27,20 +27,27 @@
 
 val log : string -> unit
 
-(** Create a DOM node tree from the given XML tree. *)
-val dom_of_xml : Xmldiff.xmltree -> Dom.node Js.t
+(** Create a DOM node tree from the given XML tree.
+  @param doc Default is [Dom_html.document].
+*)
+val dom_of_xml : ?doc:Dom_html.document Js.t ->
+   Xmldiff.xmltree -> Dom.node Js.t
 
 (** [dom_node_by_path path] returns the DOM node corresponding to
  the given [path] or raise [Not_found].
    @param skip_node is a function taking the current node and returning [true]
    if the node must not be taken into account during the lookup. Default is
-   to not skip any node (a function returning always [false]). *)
+   to not skip any node (a function returning always [false]).
+  @param doc Default is [Dom_html.document]. *)
 val dom_node_by_path :
+  ?doc:Dom_html.document Js.t ->
   ?skip_node: (Dom.node Js.t -> bool) -> Xmldiff.patch_path -> Dom.node Js.t
 
 (** [apply_dom_patch patch] applies the given patch to the DOM.
   @param skip_node see {!dom_node_by_path}.
+  @param doc Default is [Dom_html.document].
 *)
 val apply_dom_patch :
+  ?doc:Dom_html.document Js.t ->
   ?skip_node: (Dom.node Js.t -> bool) ->
     (Xmldiff.patch_path * Xmldiff.patch_operation) list -> unit
